<resources>

    <!--<string name="wjk_mindset_activity_string_app_name">Alchemy Mindlink</string>-->

    <!--<string name="wjk_mindset_activity_string_btnDialog">Device search</string>-->

    <!--<string name="wjk_mindset_activity_string_chart">Brainwave bands</string>-->

    <!--<string name="wjk_mindset_activity_string_attention">Attention</string>-->

    <!--<string name="wjk_mindset_activity_string_meditation">Meditation</string>-->

    <!--<string name="wjk_mindset_activity_string_statelink_none">None</string>-->

    <!--<string name="wjk_mindset_activity_string_statelink_connected">Connected</string>-->

    <!--<string name="wjk_mindset_activity_string_statelink_connecting">Connecting…</string>-->

    <!--<string name="wjk_mindset_dialog_string_startsearch">Start search</string>-->

    <!--<string name="wjk_mindset_dialog_string_paireddevices">Paired</string>-->

    <!--<string name="wjk_mindset_dialog_string_scandevices">New device</string>-->

    <!--<string name="wjk_mindset_dialog_string_notfound">Not found</string>-->

    <!--<string name="wjk_mindset_dialog_string_scaning">Searching…</string>-->

    <!--<string name="wjk_mindset_dialog_string_unbluetooth">Not bluetooth</string>-->



    <!--<string name="wjk_mindset_activity_string_app_name">腦波連結器</string>-->

    <!--<string name="wjk_mindset_activity_string_btnDialog">藍芽配對</string>-->

    <!--<string name="wjk_mindset_activity_string_chart">腦波頻段</string>-->

    <!--<string name="wjk_mindset_activity_string_attention">專注</string>-->

    <!--<string name="wjk_mindset_activity_string_meditation">冥想</string>-->

    <!--<string name="wjk_mindset_activity_string_statelink_none">未連接</string>-->

    <!--<string name="wjk_mindset_activity_string_statelink_connected">已連接</string>-->

    <!--<string name="wjk_mindset_activity_string_statelink_connecting">連接中…</string>-->

    <!--<string name="wjk_mindset_dialog_string_startsearch">搜尋裝置</string>-->

    <!--<string name="wjk_mindset_dialog_string_paireddevices">配對裝置</string>-->

    <!--<string name="wjk_mindset_dialog_string_scandevices">可用的裝置</string>-->

    <!--<string name="wjk_mindset_dialog_string_notfound">未發現裝置</string>-->

    <!--<string name="wjk_mindset_dialog_string_scaning">搜尋中…</string>-->

    <!--<string name="wjk_mindset_dialog_string_unbluetooth">沒有藍芽設備</string>-->

    <string name="wjk_mindset_activity_string_app_name">腦波連接器</string>
<!--    脑波连接器-->
    <string name="wjk_mindset_activity_string_btnDialog">藍芽配對</string>
<!--    蓝牙配对-->
    <string name="wjk_mindset_activity_string_chart">腦波頻段</string>
<!--    脑波频段-->
    <string name="wjk_mindset_activity_string_attention">專注</string>
<!--    专注-->
    <string name="wjk_mindset_activity_string_meditation">冥想</string>
<!--    冥想-->
    <string name="wjk_mindset_activity_string_statelink_none">未連接</string>
<!--    未连接-->
    <string name="wjk_mindset_activity_string_statelink_connected">已連接</string>
<!--    已连接-->
    <string name="wjk_mindset_activity_string_statelink_connecting">連接中…</string>
<!--    连接中…-->
    <string name="wjk_mindset_dialog_string_startsearch">搜尋設備</string>
<!--    搜寻设备-->
    <string name="wjk_mindset_dialog_string_paireddevices">配對的設備</string>
<!--    配对的设备-->
    <string name="wjk_mindset_dialog_string_scandevices">可用的設備</string>
<!--    可用的设备-->
    <string name="wjk_mindset_dialog_string_notfound">未找到設備</string>
<!--    未找到设备-->
    <string name="wjk_mindset_dialog_string_scaning">搜尋中…</string>
<!--    搜寻中…-->
    <string name="wjk_mindset_dialog_string_unbluetooth">沒有藍芽設備</string>
<!--    没有蓝牙设备-->
</resources>
