<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/wjk_mindset_activity_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back_black"
        android:visibility="gone" />

    <ProgressBar
        android:id="@+id/wjk_mindset_activity_progressReady"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_centerInParent="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:textColor="#999999"
                android:text="@string/wjk_mindset_activity_string_attention" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:textColor="#999999"
                android:text="@string/wjk_mindset_activity_string_meditation" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="16dp"
            android:layout_marginTop="8dp">

            <com.alchemy.wjk.mind.widget.PieView
                android:id="@+id/wjk_mindset_activity_pieLeft"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="8dp" />

            <com.alchemy.wjk.mind.widget.PieView
                android:id="@+id/wjk_mindset_activity_pieRight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="8dp" />
        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="#999999"
            android:text="@string/wjk_mindset_activity_string_chart" />

        <com.alchemy.wjk.mind.widget.WavechartView
            android:id="@+id/wjk_mindset_activity_chartMind"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="16dp" />

        <Button
            android:id="@+id/wjk_mindset_activity_btnDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wjk_mindset_activity_string_btnDialog" />

        <TextView
            android:id="@+id/wjk_mindset_activity_logText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wjk_mindset_activity_string_statelink_none"
            android:layout_gravity="center_horizontal"
            android:textSize="24sp"
            android:layout_marginBottom="16dp" />

    </LinearLayout>

</RelativeLayout>
